Adjust the contact hover popup things to not have a bold text (and use the correct font) and make the text more readable.

--- a/public/less/branding/contact.less
+++ b/public/less/branding/contact.less
@@ -54,13 +54,12 @@ aside.contact nav.contact {
           p {
             margin-bottom : 0;
             font : 14px/1 @source;
-            font-weight: bold;
-            color : @blue-dark;
+            color : @text-very-dark;
             margin : 0;
           }
           small {
-            font : .75em/1 @sans;
-            color : @blue-medium;
+            font : .75em/1 @source;
+            color : @text-dark;
           }
         }
         &:hover {
